/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * user guide available at https://docs.gradle.org/4.10.2/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'
    // Apply the application plugin to add support for building an application
    id 'application'
    id 'idea'
    id 'edu.sc.seis.launch4j' version '2.4.6'

    id "com.jonaslasauskas.capsule" version "0.3.0"
    id "com.github.johnrengelman.shadow" version "5.1.0"
    id "com.github.ben-manes.versions" version "0.25.0"
}

group = 'com.github.chhh'
version = '13.0-build01'

description = """FragPipe - run complete proteomics analyses from the GUI"""



java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}

// Define the main class for the application
def startClass = 'com.dmtavt.fragpipe.Fragpipe'
mainClassName = "${startClass}"
application {
    mainClassName = "${startClass}"
}
def releaseDir = 'github-release'

//
//task createStartScripts(type: CreateStartScripts, group: 'release') {
//    outputDir = file('build/github-release')
//    mainClassName = 'umich.msfragger.gui.MsFraggerGui'
//    applicationName = 'FragPipe'
//    executableDir = './'
//    classpath = files("asd/FragPipe-${version}.jar")
//}

repositories {
    jcenter()
    mavenCentral()
    mavenLocal()
}

// This is really the important part
sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources', 'src']
            excludes = ['*.java']
            //excludes = ['*.java', '*.jar']
        }
    }
    // add tests sources here (this project didn't have them!)
    test {
        java.srcDirs = ['test']
        resources.srcDirs = ["test/resources"]
    }
}

shadowJar {
    archiveBaseName = "${project.name}"
    archiveClassifier = ""
    minimize()
}

distributions {
    main {
        //distributionBaseName = 'FragPipe'
        contents {
            from('/') {
                include 'tools/**'
            }
            from('/') {
                include 'workflows/**'
            }
        }
    }
}

// replacing old transitive dependencies with newer ones
//configurations.each {
//    c -> c.resolutionStrategy.dependencySubstitution {
//        all { DependencySubstitution dep ->
//            if (dep.requested.group == 'io.reactivex' && dep.requested.module == 'rxjava') {
//                dep.useTarget 'io.reactivex:rxjava:1.3.8'
//            }
//        }
//    }
//}

dependencies {
    implementation 'one.util:streamex:0.7.2'
    implementation 'org.jooq:jool-java-8:0.9.14'

    implementation 'org.jgrapht:jgrapht-core:1.4.0'
    implementation 'org.apache.httpcomponents:httpcore:4.4.11'
    implementation(group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.7')
    implementation 'commons-logging:commons-logging-api:1.1'

    implementation 'org.apache.httpcomponents:httpmime:4.5.7'
    implementation 'org.apache.commons:commons-lang3:3.9'
    //compile group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation 'com.miglayout:miglayout-swing:5.2'

    implementation ('io.reactivex:rxswing:0.27.0'){
        exclude group: 'io.reactivex', module: 'rxjava'
    }
    implementation 'io.reactivex:rxjava:1.3.8'

    implementation 'org.greenrobot:eventbus:3.1.1'
    implementation 'org.jsoup:jsoup:1.11.3'

    // logging
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

    // downloaded / precompiled jars
    implementation fileTree(dir: 'libs', include: '*.jar')
    implementation 'org.yaml:snakeyaml:1.26' // TMT-Integrator config parsing

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12'
}

configurations {
    all*.exclude group: 'commons-logging', module: 'commons-logging'
    //all*.exclude group: 'commons-codec', module: 'commons-codec'
}

capsule {
  capsuleManifest {
    applicationId = 'com.github.chhh.FragPipe'
    applicationClass = 'umich.msfragger.gui.MsFraggerGui'
  }
}

task listJars(group: 'chhh-help') {
    doLast {
        configurations.runtimeClasspath.each { File file -> println file.name }
    }
}

task showImplDeps(type: DependencyReportTask, group: 'chhh-help',
        description: "Show only implementation dependencies") {
    configurations = [project.configurations.implementation] as Set
}

task createStartScripts(type: CreateStartScripts, group: "chhh-release") {
    outputDir = file('build/pre-zip-release')
    mainClassName = "${startClass}"
    applicationName = 'FragPipe'
    classpath = files("fragpipe-${project.version}.jar")
}

task makeExeAndCopyToScripts(type: Copy, group: 'chhh-release', description: 'The .exe file ' +
        'created requires to be placed in ./bin/ sub-direcotry of the final distribution and ' +
        'having fragpipe-x.x.x.jar in ./lib/ sub-directory') {
    dependsOn 'createExe'
    from "$buildDir/launch4j/bin"
    into file("$buildDir/scripts")
}

task copyJre(type: Copy, group: 'chhh-release', description: 'Copies JRE to build/install/fragpipe') {
    from "$buildDir/../../jre/OpenJDK8U-jre_x64_windows_hotspot_8u242b08"
    into file("$buildDir/install/${project.name}")
}

void createTaskMakeReleaseZip(boolean withJre, String releaseDir, String startClass) {
    String taskName = "makeReleaseZip" + (withJre ? "WithJre" : "NoJre");

    task (taskName, type: Zip, group: 'chhh-release') {
        //dependsOn 'clean'
        dependsOn 'makeExeAndCopyToScripts'
        dependsOn 'installDist'

        if (!withJre) {
            launch4j { // no bundled jre
                mainClassName = "${startClass}"
                icon = "${projectDir}/../logo/msfragger-icon-set_win_16-512.ico"
                outputDir = "launch4j/bin"
                libraryDir = '../lib'
                dontWrapJar = true
                downloadUrl = 'https://adoptopenjdk.net/'
                jreMinVersion = '1.8'
            }
        } else {
            dependsOn 'copyJre'
            tasks.findByName('copyJre').mustRunAfter 'installDist'
            launch4j {
                mainClassName = "${startClass}"
                icon = "${projectDir}/../logo/msfragger-icon-set_win_16-512.ico"
                outputDir = "launch4j/bin"
                libraryDir = '../lib'
                dontWrapJar = true
                downloadUrl = 'https://adoptopenjdk.net/'
                bundledJrePath = "../jre"
                bundledJre64Bit = true
                bundledJreAsFallback = false
            }
        }

        tasks.findByName('makeExeAndCopyToScripts').mustRunAfter 'clean'
        tasks.findByName('installDist').mustRunAfter 'makeExeAndCopyToScripts'

        archiveFileName = (withJre ? "FragPipe-jre-${project.version}.zip" : "FragPipe-${project.version}.zip")
        destinationDirectory = file("$buildDir/$releaseDir")
        from "$buildDir/install"
    }
}

createTaskMakeReleaseZip(true, releaseDir, startClass)
createTaskMakeReleaseZip(false, releaseDir, startClass)

task makeReleaseZips(group: 'chhh-release') {
    dependsOn('clean')
    dependsOn('makeReleaseZipNoJre')
    dependsOn('makeReleaseZipWithJre')

    tasks.findByName('makeReleaseZipNoJre').mustRunAfter 'clean'
    tasks.findByName('makeReleaseZipWithJre').mustRunAfter 'makeReleaseZipNoJre'
}